# 3cerebros

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
cerebros/: __init__.py  brain.py  cli.py  distill.py  format.py  interview.py  jobs.py  memory.py  policy.py  triage.py
cerebros/ingest/: __init__.py  chatgpt.py  email.py  files.py  telegram.py
cerebros/mcp/: __init__.py  server.py
examples/: intelecto_seam.py  minimal_host.py
skills/cerebro-nota/: SKILL.md
skills/cerebro-socratica/: SKILL.md
skills/cerebro-triagem/: SKILL.md
spec/: FORMAT.md  POLICY.md
tests/: test_cli.py  test_ingest.py  test_interview.py  test_jobs.py  test_smoke.py
